--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,13 +6,6 @@
   "configurations": [
     {
       "type": "java",
-      "name": "Main",
-      "request": "launch",
-      "mainClass": "Main",
-      "projectName": "aps-servicos-de-facil-acesso_4087e982"
-    },
-    {
-      "type": "java",
       "name": "Current File",
       "request": "launch",
       "mainClass": "${file}"
@@ -21,8 +14,16 @@
       "type": "java",
       "name": "App",
       "request": "launch",
-      "mainClass": "App",
-      "projectName": "aps-servicos-de-facil-acesso_4087e982",
+      "mainClass": "controller.App",
+      "projectName": "aps-servicos-de-facil-acesso",
+      "vmArgs": "--module-path C:/Java/JavaLibs/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
+    },
+    {
+      "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "controller.Main",
+      "projectName": "aps-servicos-de-facil-acesso",
       "vmArgs": "--module-path C:/Java/JavaLibs/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
     }
   ]
